--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "express-session": "^1.18.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
     "nocache": "^4.0.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "nodemon": "^3.1.9"
   },
   "keywords": [],
