--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
     "nocache": "^4.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.2",
     "puppeteer": "^24.12.1",
     "razorpay": "^2.9.6",
     "sharp": "^0.34.1",
