--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "script.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build:css": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/output.css --watch"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "handlebars": "^4.7.8",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
@@ -27,7 +29,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.2",
-    "puppeteer": "^24.12.1",
+    "puppeteer": "^24.23.0",
     "razorpay": "^2.9.6",
     "sharp": "^0.34.1",
     "socket.io": "^4.8.1",
@@ -35,7 +37,10 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
-    "nodemon": "^3.1.9"
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^3.1.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "keywords": [],
   "description": ""
